package ticketReservation;

public class Admin {

}
