package ticketReservation;

public abstract class Person {
    Integer id;
    String name;
    String email;
    String phoneNumber;
    public abstract void getDetails();
}
